--- a/Style/mediumScreenSize.css
+++ b/Style/mediumScreenSize.css
@@ -33,8 +33,8 @@
         font-size: 18px;        
     }    
     #brief>div>img{
-        width: 10%;
-        border-radius: 100%;
+        width: 15%;
+        border-radius: 10%;
     } 
     .sections{
         padding: 60px 0;
@@ -45,14 +45,14 @@
     .about_the_section{       
         font-size: 17px;       
     } 
-    #tech{             
+    #tech, #customer, #soft{             
         gap: 40px 0px;        
     } 
-    #tech>div>img{
+    #tech>div>img, #customer>div>img, #soft>div>img{
         width:90%;
         height: 100%;    
     }
-    #tech>div>p{
+    #tech>div>p, #customer>div>p, #soft>div>p{
         font-size: 12px;
     }
     #contact_details{
@@ -92,9 +92,7 @@
     #skills>div{
         font-size: 15px;
     }    
-    .git-stats>img{
-        width: 47%;
-    }
+    
     .main{       
         display: flex;
         flex-direction: column;        
