--- a/Style/smallScreenSize.css
+++ b/Style/smallScreenSize.css
@@ -25,12 +25,21 @@
         /* padding-right: 10px; */
         /* border: 1px solid ; */
         width: 100%;   
-        z-index: 1;       
+        z-index: 1;  
+        flex-direction: column;
+        display: block;
     }
     #tabs>div:last-child>i{
         margin-right: 10px; 
         font-weight: 00;       
     } 
+    #dropdown{
+        border-color: 1px solid red;
+    }
+    #bar{
+        right: 0;
+        margin-left: 80px;
+    }
     #cross{
         display: none;
     }   
@@ -38,7 +47,7 @@
         position: absolute; 
         position: fixed;
         z-index: 1;         
-        display: none; 
+        display: block; 
         width: 100%;        
         flex-direction: column;
         text-align: right;         
@@ -101,7 +110,7 @@
     } 
     /* .section{
         
-    }    */
+    }   */
     #about_me{
         background-color: 
         #fbfbfc;
@@ -129,17 +138,25 @@
     #skills>div{
         font-size: 13px;
     }
-    #tech{
-        grid-template-columns: repeat(3, 1fr);
-        gap: 30px 0px ;
+    #tech,
+    #customer,
+    #soft {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 30px 0px;
         margin: auto;
         /* border: 1px solid; */
-    }   
-    #tech>div>p{
+    }
+
+    #tech>div>p,
+    #customer>div>p,
+    #soft>div>p {
         font-size: 12px;
     }
-    #tech>div>img{
-        width:80%;           
+
+    #tech>div>img,
+    #customer>div>img,
+    #soft>div>img {
+        width: 80%;
     } 
     .git-stats{
         flex-direction: column;
